<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.angie.tony.playwithtony.EmoActivity">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tony_background_image_view"
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        android:src="@drawable/hendricks_park_bk" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tony_face_image_view"
        android:contentDescription="@string/me"
        android:scaleType="fitXY"
        android:src="@drawable/normal" />



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right|top">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/soul_sister_play_button"
            android:layout_gravity="right|top"
            android:text="@string/soul_sister" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beautiful"
            android:id="@+id/beautiful_play_button"
            android:layout_gravity="right|top" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wo_de_ge_sheng_li"
            android:id="@+id/in_my_song_play_button"
            android:layout_gravity="right|top" />

    </LinearLayout>


</FrameLayout>
